Revision history for Perl extension DTL::Fast.

1.613 - in development
    - implemented html_protect in C, test performance increased 17%, fixes #32
    - internal context access optimisation, total performance increase 30%

1.612 - Sun 15 Feb 2015 18:40 MSK
    - Fixed timeuntil test race condition, thanks to @eserte, fixes #59
    - Implemented dynamic inheritance. You may now extend with context, fixes #9
    - Redundant serialized cache removed from templating system. Only runtime and custom now.
    - Added block_super tag and {{ block.super }} support, fixes #52

1.611 - Sun 15 Feb 2015 11:44 MSK
    - stringformat now treats undef values as empty strings
    - fixed bug with crashing on error messging with "undef in sprintf" error, fixes #57
    - logical operators now behaves properly. Second operand evaluated only if first is not enough, fixes #25
    - upper and lower filters treats undef as an empty string
    - implemented split filter (experimental)
    - implemented sprintf tag (experimental)

1.609 - Wed 11 Feb 2015 21:38 MSK
    - Dynamic filters loading implemented, fixes #16
    - Dynamic operators loading implemented, fixes #19
    - Custom operators introduced
    - Documented some additional filters 
    - Fixed bug with locale-specific string operations: cmp, lt, gt, upper, lower, capfirst, dictsort

1.608 - Tue 10 Feb 2015 19:09 MSK
    - Removed unsafe map usage in complicated loops
    - Fixed bug with spaceless closing tags `endcomment` and `endverbatim`

1.606 - Mon 09 Feb 2015 16:23 MSK
    - SSI tag behavior now is like in Django, fixes #26
    - ifchanged tag is now rendered on the first pass
    - ifchanged tag can now work without parameters (watching rendered content); not recommended, bad performance
    - new tag - warn
    - fixed bug with slicing indexes outside the array boundaries
    - implemented dynamic tags loading and preloading registering with register_tag, fixes #18