@@ -240,22 +240,16 @@ sub time2str_php
 ### end of Dotiac::DTL code
 
 push @EXPORT_OK, 'uri_escape';
-sub uri_escape{return URI::Escape::XS::uri_escape(shift);}
+*DTL::Fast::Utils::uri_escape = \&URI::Escape::XS::uri_escape;
 
 push @EXPORT_OK, 'uri_unescape';
-sub uri_unescape{return URI::Escape::XS::uri_unescape(shift);}
+*DTL::Fast::Utils::uri_unescape = \&URI::Escape::XS::uri_unescape;
 
 push @EXPORT_OK, 'escape';
-sub escape{return URI::Escape::XS::encodeURIComponent(shift);}
+*DTL::Fast::Utils::escape = \&URI::Escape::XS::encodeURIComponent;
 
 push @EXPORT_OK, 'unescape';
-sub unescape{return URI::Escape::XS::decodeURIComponent(shift);}
-
-our %BOOL_PROCESSORS = (
-    'SCALAR' => sub{ my $value = shift; return $$value; }
-    , 'HASH' => sub{ my $value = shift; return scalar keys(%$value); }
-    , 'ARRAY' => sub{ my $value = shift; return scalar @$value; }
-);
+*DTL::Fast::Utils::unescape = \&URI::Escape::XS::decodeURIComponent;
 
 push @EXPORT_OK, 'as_bool';
 sub as_bool
@@ -265,9 +259,17 @@ sub as_bool
 
     if( $value_type )
     {
-        if( $BOOL_PROCESSORS{$value_type} )
+        if ( $value_type eq 'SCALAR' )
         {
-            $value = $BOOL_PROCESSORS{$value_type}->($value);
+            $value = $$value;
+        }
+        elsif( $value_type eq 'HASH' )
+        {
+            $value = scalar keys(%$value);
+        }
+        elsif( $value_type eq 'ARRAY' )
+        {
+            $value = scalar @$value;
         }
         elsif( UNIVERSAL::can( $value, 'as_bool' ) )
         {
